# lucidshark

./: .gitignore  .lucidscan.yml  CHANGELOG.md  LICENSE  QUALITY.md  README.md  install.ps1  install.sh  lucidscan.yml  lucidshark.spec  lucidshark.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile
.github/actions/scan/: action.yml
.github/workflows/: ci.yml  release.yml
.lucidshark/: quality-history.json
ci-templates/: bitbucket-pipelines.yml  gitlab-ci.yml
docs/: ci-integration.md  exclude-patterns.md  guide-python.md  guide-typescript.md  help.md  ignore-patterns.md  main.md  roadmap.md
docs/languages/: README.md  c.md  cpp.md  csharp.md  go.md  java.md  javascript.md  kotlin.md  php.md  python.md  ruby.md  rust.md  scala.md  swift.md  typescript.md
docs/specs/: main.md
scripts/: build-bundle.ps1  build-bundle.sh
src/lucidscan/: __init__.py  cli.py
src/lucidscan/bootstrap/: __init__.py  paths.py  validation.py
src/lucidscan/cli/: __init__.py  __main__.py  arguments.py  config_bridge.py  exit_codes.py  runner.py
src/lucidscan/cli/commands/: autoconfigure.py  help.py  init.py  scan.py  status.py
src/lucidscan/config/: __init__.py  loader.py  models.py  validation.py
src/lucidscan/core/: __init__.py  domain_runner.py  git.py  models.py  streaming.py  subprocess_runner.py
src/lucidscan/generation/: __init__.py  config_generator.py  package_installer.py
src/lucidscan/mcp/: __init__.py  formatter.py  server.py  tools.py  watcher.py
src/lucidscan/pipeline/: __init__.py  executor.py
src/lucidscan/plugins/: __init__.py  discovery.py
src/lucidscan/plugins/coverage/: __init__.py  base.py  coverage_py.py
src/lucidscan/plugins/enrichers/: __init__.py  base.py
src/lucidscan/plugins/linters/: biome.py  checkstyle.py  eslint.py  ruff.py
src/lucidscan/plugins/reporters/: sarif_reporter.py  table_reporter.py
src/lucidscan/plugins/scanners/: base.py  checkov.py  opengrep.py  trivy.py
src/lucidscan/plugins/test_runners/: __init__.py  base.py  jest.py  pytest.py
src/lucidscan/plugins/type_checkers/: __init__.py  base.py  mypy.py  pyright.py  typescript.py
src/lucidscan/scanners/: __init__.py  checkov.py  opengrep.py  trivy.py
src/lucidshark/: __init__.py
src/lucidshark/bootstrap/: __init__.py  download.py  platform.py  validation.py  versions.py
src/lucidshark/cli/: arguments.py  config_bridge.py  runner.py
src/lucidshark/cli/commands/: __init__.py  doctor.py  help.py  init.py  list_scanners.py  scan.py  serve.py  validate.py
src/lucidshark/config/: __init__.py  ignore.py  loader.py  models.py  validation.py
src/lucidshark/core/: domain_runner.py  models.py  paths.py  skip_handler.py  tool_validation.py
src/lucidshark/data/: checkstyle-google.xml  help.md
src/lucidshark/detection/: __init__.py  detector.py  frameworks.py  languages.py  tools.py
src/lucidshark/generation/: config_generator.py  package_installer.py
src/lucidshark/mcp/: __init__.py  formatter.py  server.py  tools.py
src/lucidshark/pipeline/: parallel.py
src/lucidshark/plugins/: __init__.py  go_utils.py  rust_utils.py  utils.py
src/lucidshark/plugins/coverage/: base.py  coverage_py.py  istanbul.py  jacoco.py  tarpaulin.py
src/lucidshark/plugins/duplication/: base.py  duplo.py
src/lucidshark/plugins/linters/: __init__.py  base.py  biome.py  checkstyle.py  clippy.py  eslint.py  pmd.py
src/lucidshark/plugins/reporters/: __init__.py  ai_reporter.py  base.py  json_reporter.py  sarif_reporter.py  summary_reporter.py
src/lucidshark/plugins/scanners/: __init__.py  checkov.py  gosec.py  opengrep.py  trivy.py
src/lucidshark/plugins/test_runners/: base.py  cargo.py  jest.py  karma.py  maven.py  mocha.py  playwright.py  pytest.py
src/lucidshark/plugins/type_checkers/: __init__.py  cargo_check.py  mypy.py  pyright.py  spotbugs.py  (+1 more)
tests/: __init__.py
tests/claude-manual/: TEST_GO_E2E.md
tests/integration/: __init__.py  conftest.py
tests/integration/cli/: test_autoconfigure_integration.py  test_init_integration.py  test_scan_integration.py
tests/integration/coverage/: test_coverage_py_integration.py  test_jacoco_integration.py  test_tarpaulin_integration.py
tests/integration/linters/: __init__.py  test_biome_integration.py  test_checkstyle_integration.py  test_clippy_integration.py  test_eslint_integration.py  test_pmd_integration.py  test_ruff_integration.py
tests/integration/mcp/: test_mcp_integration.py
tests/integration/projects/: conftest.py  test_java_project.py  test_python_project.py  test_rust_project.py  test_security_scanning.py  test_typescript_project.py
tests/integration/scanners/: test_checkov_integration.py  test_gosec_integration.py  test_opengrep_integration.py  test_trivy_integration.py
tests/integration/test_runners/: test_cargo_integration.py  test_maven_integration.py  test_pytest_integration.py
tests/integration/type_checkers/: __init__.py  test_cargo_check_integration.py  test_mypy_integration.py  test_pyright_integration.py  test_spotbugs_integration.py  test_typescript_integration.py
tests/unit/: __init__.py  test_cli.py  test_init_command.py
tests/unit/bootstrap/: test_paths.py  test_platform.py  test_validation.py  test_versions.py
tests/unit/cli/: test_main_entry.py  test_runner.py
tests/unit/config/: __init__.py  test_domain_excludes.py  test_ignore.py  test_loader.py  test_models.py  test_validation.py
tests/unit/core/: test_domain_runner.py  test_git.py  test_models.py
tests/unit/detection/: test_frameworks.py  test_languages.py
tests/unit/enrichers/: test_base.py
tests/unit/generation/: test_package_installer.py
tests/unit/mcp/: test_formatter.py  test_server.py  test_server_extended.py  test_tools.py  test_watcher.py
tests/unit/pipeline/: test_executor.py  test_parallel.py
tests/unit/plugins/: test_discovery.py  test_exclusion_patterns.py  test_go_utils.py  test_utils.py
tests/unit/presets/: __init__.py  test_presets.py
tests/unit/reporters/: test_reporters.py
tests/unit/scanners/: test_checkov.py  test_discovery.py  test_opengrep.py  test_trivy.py
(+48 files in other folders)
