["build-system"]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucidshark"
version = "0.5.14"
description = "LucidShark - The trust layer for AI-assisted development"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Voldeq GmbH", email = "toni.antunovic@voldeq.com" }
]
keywords = [
  "security",
  "scanner",
  "devsecops",
  "sast",
  "sca",
  "iac",
  "container",
  "vulnerability",
  "trivy",
  "semgrep",
  "checkov",
  "cli",
  "mcp",
  "ai",
  "claude",
  "cursor",
  "linting",
  "type-checking",
  "testing",
  "coverage",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "PyYAML>=6.0",
  "pathspec>=0.12.0",
  "questionary>=2.0",
  "Jinja2>=3.0",
  "mcp>=1.0.0",
  "watchdog>=4.0.0",
  "defusedxml>=0.7.1",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.0",
  "pyright>=1.1",
  "types-PyYAML>=6.0",
]

[project.scripts]
lucidshark = "lucidshark.cli:main"

[project.entry-points."lucidshark.linters"]
ruff = "lucidshark.plugins.linters.ruff:RuffLinter"
eslint = "lucidshark.plugins.linters.eslint:ESLintLinter"
biome = "lucidshark.plugins.linters.biome:BiomeLinter"
checkstyle = "lucidshark.plugins.linters.checkstyle:CheckstyleLinter"

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Exclude project-based integration tests by default (they require external deps)
# Run with: pytest tests/integration/projects -v
# Also ignore test projects' internal tests (python-webapp/tests, etc.)
addopts = "--ignore=tests/integration/projects --ignore=tests/integration/projects/python-webapp/tests --ignore=tests/integration/projects/typescript-api/tests"
markers = [
    "integration: marks tests as integration tests (run with: pytest -m integration)",
]

# Tool versions - single source of truth for all lucidshark-managed tools
# These versions are used when lucidshark downloads/installs the tools
[tool.lucidshark.tools]
# Security scanners
trivy = "0.68.2"
opengrep = "1.15.0"
checkov = "3.2.497"
# Linters
ruff = "0.14.11"
biome = "2.3.11"
checkstyle = "13.0.0"
# Type checkers
pyright = "1.1.408"
